<resources>
    <string name="app_name">不困</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_exit_hint" translatable="false">再按一次退出</string>

    <string name="menu_video">视频</string>
    <string name="menu_music">音乐</string>
    <string name="menu_tv">电视</string>
    <string name="menu_gank">Gank</string>
    <string name="menu_welfare">福利</string>
    <string name="menu_tool">工具</string>
    <string name="menu_share">分享</string>
    <string name="menu_setting">设置</string>
    <string name="menu_mine">我的</string>
    <string name="menu_about">关于</string>

    <string name="title_weather">天气</string>

    <string name="tab_text_1">发现</string>
    <string name="tab_text_2">推荐</string>
    <string name="tab_text_3">日报</string>
    <string name="tab_text_weekly">周排行</string>
    <string name="tab_text_monthly">月排行</string>
    <string name="tab_text_historical">总排行</string>

    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>
    <string name="alivc_speed_one_times">正常</string>
    <string name="alivc_speed_optf_times">1.25倍速</string>
    <string name="alivc_speed_opt_times">1.5倍速</string>
    <string name="alivc_speed_twice_times">2.0倍速</string>
    <string name="alivc_speed_mode">倍速播放</string>
    <string name="alivc_speed_tips">当前视频已切换为%1$s播放</string>
    <string name="alivc_loading">视频正在加载中..</string>
    <string name="alivc_error_msg">错误消息</string>
    <string name="alivc_error_code">错误码:</string>
    <string name="alivc_retry">重试</string>
    <string name="alivc_replay">重播</string>
    <string name="alivc_alivc_replay_msg">视频播放结束</string>
    <string name="alivc_net_disable">无网络连接，检查网络后点击重新播放</string>
    <string name="alivc_net_state_mobile">当前为移动网络，请点击播放</string>
    <string name="alivc_net_state_mobile_yes">继续播放</string>
    <string name="alivc_net_state_mobile_no">退出播放</string>
    <string name="alivc_left_side">左侧</string>
    <string name="alivc_brightness">亮度</string>
    <string name="alivc_control">调节</string>
    <string name="alivc_center">中心</string>
    <string name="alivc_progress">进度</string>
    <string name="alivc_right_side">右侧</string>
    <string name="alivc_volume">音量</string>
    <string name="slivc_not_support_url">不支持Url播放类型下载...</string>

    <string name="expand">展开</string>
    <string name="collapse">收起</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
